# asteroid_attach

./: .gitignore  AGENTS.md  Castalia Radar-based.ply  OPTIMIZATION_NOTES.md  PHASE2_OPTIMIZATION_GUIDE.md  PKL_USAGE_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  run.py  test_all.py  test_simple_run.py
algorithms/: README.md  __init__.py  adaptive_homotopy.py  constraint_handler.py  convex_optimizer_cvxpy.py  convex_optimizer_socp.py  direct_method.py  direct_method_optimized.py  homotopy.py  homotopy_fast.py  hybrid_optimization.py  multiple_shooting.py  multiple_shooting_optimized.py  pseudospectral.py  pseudospectral_fast.py  pseudospectral_optimized.py  shooting_fast.py  shooting_method.py  shooting_method_optimized.py  trajectory_comparator.py  unified_optimizer.py
config/: README.md  config.yaml
control_simulation/: __init__.py  controller_optimized.py  monte_carlo.py  pid_controller.py  validator.py
data/samples/: gravity_samples.npz
docs/: MIGRATION_GUIDE.md  TEST_REPORT.md  TRAJECTORY_TEST_REPORT.md  小行星附着最优轨迹设计与仿真分析项目实施方案.md
gravity_learning/: __init__.py  gravity_dnn.py  ply_model.py
image/凸优化/8/: 8.md  code_implementation_report.txt  implement_code_summary.md  initial_plan.txt
image/凸优化/8/generate_code/asteroid_landing_convex_opt/: README.md  config.py
tests/: 分阶段验证指南.md
trajectory_optimization/: __init__.py  convex_paper.py
verify/: README.md  run_all_verification.py  verify_phase1.py  verify_phase2_optimized.py  verify_phase3.py
visualization/: __init__.py  trajectory_3d.py
(+30 files in other folders)
